// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Trip Calculator should default with 0 goose, 0 corn : cost £0.25 : no cargo to take: default zeros 1`] = `
<div>
  <form>
    <legend>
      Plan your trip
    </legend>
    <fieldset>
      <div
        class="input-group"
      >
        <label
          forhtml="cornQuantity"
        >
          Corn Quantity:
        </label>
        <input
          id="cornQuantity"
          name="quantity"
          type="number"
          value="0"
        />
      </div>
      <div
        class="input-group"
      >
        <label
          forhtml="geeseQuantity"
        >
          Geese Quantity:
        </label>
        <input
          id="geeseQuantity"
          name="quantity"
          type="number"
          value="0"
        />
      </div>
    </fieldset>
    <label>
      £ 
      0.25
    </label>
    <p
      class="user-info"
    >
      No cargo to take
    </p>
  </form>
</div>
`;

exports[`Trip Calculator should get 0 goose, 1 corn : cost £0.25 : take in this order : corn: one corn only 1`] = `
<div>
  <form>
    <legend>
      Plan your trip
    </legend>
    <fieldset>
      <div
        class="input-group"
      >
        <label
          forhtml="cornQuantity"
        >
          Corn Quantity:
        </label>
        <input
          id="cornQuantity"
          name="quantity"
          type="number"
          value="1"
        />
      </div>
      <div
        class="input-group"
      >
        <label
          forhtml="geeseQuantity"
        >
          Geese Quantity:
        </label>
        <input
          id="geeseQuantity"
          name="quantity"
          type="number"
          value="0"
        />
      </div>
    </fieldset>
    <label>
      £ 
      0.25
    </label>
    <p
      class="user-info"
    >
      take in this order :  corn
    </p>
  </form>
</div>
`;

exports[`Trip Calculator should get 0 goose, 2 corn : cost £0.50 : take in this order : corns: two corn only 1`] = `
<div>
  <form>
    <legend>
      Plan your trip
    </legend>
    <fieldset>
      <div
        class="input-group"
      >
        <label
          forhtml="cornQuantity"
        >
          Corn Quantity:
        </label>
        <input
          id="cornQuantity"
          name="quantity"
          type="number"
          value="2"
        />
      </div>
      <div
        class="input-group"
      >
        <label
          forhtml="geeseQuantity"
        >
          Geese Quantity:
        </label>
        <input
          id="geeseQuantity"
          name="quantity"
          type="number"
          value="0"
        />
      </div>
    </fieldset>
    <label>
      £ 
      0.50
    </label>
    <p
      class="user-info"
    >
      take in this order :  corns
    </p>
  </form>
</div>
`;

exports[`Trip Calculator should get 1 goose, 0 corn : cost £0.25 : take in this order : goose: one goose only 1`] = `
<div>
  <form>
    <legend>
      Plan your trip
    </legend>
    <fieldset>
      <div
        class="input-group"
      >
        <label
          forhtml="cornQuantity"
        >
          Corn Quantity:
        </label>
        <input
          id="cornQuantity"
          name="quantity"
          type="number"
          value="0"
        />
      </div>
      <div
        class="input-group"
      >
        <label
          forhtml="geeseQuantity"
        >
          Geese Quantity:
        </label>
        <input
          id="geeseQuantity"
          name="quantity"
          type="number"
          value="1"
        />
      </div>
    </fieldset>
    <label>
      £ 
      0.25
    </label>
    <p
      class="user-info"
    >
      take in this order : goose
    </p>
  </form>
</div>
`;

exports[`Trip Calculator should get 1 goose, 1 corn : cost £0.50 : take corn first: one of each 1`] = `
<div>
  <form>
    <legend>
      Plan your trip
    </legend>
    <fieldset>
      <div
        class="input-group"
      >
        <label
          forhtml="cornQuantity"
        >
          Corn Quantity:
        </label>
        <input
          id="cornQuantity"
          name="quantity"
          type="number"
          value="1"
        />
      </div>
      <div
        class="input-group"
      >
        <label
          forhtml="geeseQuantity"
        >
          Geese Quantity:
        </label>
        <input
          id="geeseQuantity"
          name="quantity"
          type="number"
          value="1"
        />
      </div>
    </fieldset>
    <label>
      £ 
      0.25
    </label>
    <p
      class="user-info"
    >
      take the corn first
    </p>
  </form>
</div>
`;

exports[`Trip Calculator should get 1 goose, 2 corn : Do not make trip, corn is at risk: one goose and 2 corns 1`] = `
<div>
  <form>
    <legend>
      Plan your trip
    </legend>
    <fieldset>
      <div
        class="input-group"
      >
        <label
          forhtml="cornQuantity"
        >
          Corn Quantity:
        </label>
        <input
          id="cornQuantity"
          name="quantity"
          type="number"
          value="2"
        />
      </div>
      <div
        class="input-group"
      >
        <label
          forhtml="geeseQuantity"
        >
          Geese Quantity:
        </label>
        <input
          id="geeseQuantity"
          name="quantity"
          type="number"
          value="1"
        />
      </div>
    </fieldset>
    <label>
      £ 
      0.00
    </label>
    <p
      class="user-info"
    >
      Do not make trip, corn is at risk
    </p>
  </form>
</div>
`;
